--- a/Eventer.API/Eventer.API.csproj
+++ b/Eventer.API/Eventer.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,12 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Eventer.Application\Eventer.Application.csproj" />
-    <ProjectReference Include="..\Eventer.DataAccess\Eventer.Infrastructure.csproj" />
+    <ProjectReference Include="..\Eventer.Infrastructure\Eventer.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
