--- a/Eventer.Infrastructure/Eventer.Infrastructure.csproj
+++ b/Eventer.Infrastructure/Eventer.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Eventer.Domain\Eventer.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
