Authentication and authorization completed. Users can now sign up and sign in the clien app. Authorized users can explore Event list via JWT Access token. Implemented main Refresh and Access token functionality.

--- a/Eventer.API/appsettings.json
+++ b/Eventer.API/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "SuperSecretKeyForEventerAPI12345",
+    "Issuer": "Eventer.API",
+    "Audience": "Eventer.Client",
+    "TokenLifetimeMinutes": 15
+  },
   "AllowedHosts": "*"
 }
