Users can enroll on events. Images upload.

--- a/Eventer.API/appsettings.json
+++ b/Eventer.API/appsettings.json
@@ -14,5 +14,8 @@
     "Audience": "Eventer.Client",
     "TokenLifetimeMinutes": 15
   },
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7028"
+  },
   "AllowedHosts": "*"
 }
