--- a/Eventer.API/Eventer.API.csproj
+++ b/Eventer.API/Eventer.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Eventer.Infrastructure\Eventer.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\events\" />
+  </ItemGroup>
+
 </Project>
