--- a/Eventer.API/Eventer.API.csproj
+++ b/Eventer.API/Eventer.API.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\uploads\events\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
