--- a/Eventer.API/Eventer.API.csproj
+++ b/Eventer.API/Eventer.API.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Eventer.Application\Eventer.Application.csproj" />
+    <ProjectReference Include="..\Eventer.Domain\Eventer.Domain.csproj" />
     <ProjectReference Include="..\Eventer.Infrastructure\Eventer.Infrastructure.csproj" />
   </ItemGroup>
 
