--- a/Eventer.Application/Eventer.Application.csproj
+++ b/Eventer.Application/Eventer.Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Eventer.Contracts\Eventer.Contracts.csproj" />
     <ProjectReference Include="..\Eventer.Domain\Eventer.Domain.csproj" />
   </ItemGroup>
 
