--- a/Eventer.Contracts/Eventer.Contracts.csproj
+++ b/Eventer.Contracts/Eventer.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Eventer.Domain\Eventer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
