--- a/Eventer.Infrastructure/Eventer.Infrastructure.csproj
+++ b/Eventer.Infrastructure/Eventer.Infrastructure.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Eventer.Application\Eventer.Application.csproj" />
+    <ProjectReference Include="..\Eventer.Contracts\Eventer.Contracts.csproj" />
     <ProjectReference Include="..\Eventer.Domain\Eventer.Domain.csproj" />
   </ItemGroup>
 
