--- a/Eventer.Tests/Eventer.Tests.csproj
+++ b/Eventer.Tests/Eventer.Tests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Eventer.Contracts\Eventer.Contracts.csproj" />
     <ProjectReference Include="..\Eventer.Infrastructure\Eventer.Infrastructure.csproj" />
   </ItemGroup>
 
